--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -9,7 +9,13 @@ scenes=["res://node_3d.tscn"]
 [dialog_bounds]
 
 export=Rect2(828, 618, 1800, 1000)
+create_new_node=Rect2(828, 418, 1800, 1400)
 
 [export_options]
 
 default_filename="blender_files"
+
+[color_picker]
+
+picker_shape=3
+recent_presets=PackedColorArray(0.349689, 0.349689, 0.349689, 1, 0.152926, 0.390877, 0.407199, 1)
