--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_2=270
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
@@ -30,6 +30,7 @@ current_scene="res://node_3d.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
@@ -46,3 +47,9 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[EditorWindow]
+
+screen=0
+mode="maximized"
+position=Vector2i(110, 76)
